# agentify-cloud

./: .gitignore  AGENTS.md  CHANGELOG.md  EXECUTION.md  Makefile  PROJECT.md  README.md  pyproject.toml
scripts/: check_installed_artifact.py
src/agentify/: __init__.py  auth.py  cli.py  pi_client.py  pi_runtime.py  server.py
tests/: test_auth.py  test_cli.py  test_pi_client.py  test_pi_runtime.py  test_server.py
