[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentify-cloud"
version = "0.1.4"
description = "Universal FastAPI and FastMCP gateway backed by a local Pi AgentSession"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "fastmcp>=2.0",
  "httpx>=0.27",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
agentify = "agentify.cli:main"
agentify-cloud = "agentify.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentify"]
force-include = { "src/vendor/pi" = "vendor/pi" }

[tool.hatch.build.targets.sdist]
include = [
  "/AGENTS.md",
  "/CHANGELOG.md",
  "/EXECUTION.md",
  "/PROJECT.md",
  "/README.md",
  "/scripts",
  "/src",
  "/tests",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
